--- a/src/view/layout/sample.fxml
+++ b/src/view/layout/sample.fxml
@@ -44,46 +44,55 @@
             <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="ALWAYS" />
          </rowConstraints>
          <children>
-            <Label fx:id="selectTypeLabel" text="Wybierz rodzaj sygnału:" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-            <ComboBox fx:id="signalTypeComboBox" prefWidth="200.0" promptText="-" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
-               <GridPane.margin>
-                  <Insets bottom="5.0" />
-               </GridPane.margin>
-            </ComboBox>
-            <TextField fx:id="durationInput" prefWidth="200.0" promptText="Wpisz czas trwania [s]" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
-               <GridPane.margin>
-                  <Insets bottom="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="startingTimeInput" promptText="Wpisz czas początkowy [s]" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
-               <GridPane.margin>
-                  <Insets bottom="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="amplitudeInput" promptText="Wpisz amplitudę" GridPane.rowIndex="6" GridPane.valignment="BOTTOM">
-               <GridPane.margin>
-                  <Insets bottom="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="frequencyInput" layoutX="10.0" layoutY="273.0" promptText="Wpisz częstotliwość [Hz]" GridPane.rowIndex="7" GridPane.valignment="BOTTOM">
-               <GridPane.margin>
-                  <Insets bottom="5.0" />
-               </GridPane.margin>
-            </TextField>
+            <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2" GridPane.rowSpan="7">
+               <tabs>
+                  <Tab text="Szum">
+                     <content>
+                        <GridPane vgap="1.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
+                           </rowConstraints>
+                           <children>
+                              <Label fx:id="selectTypeLabel" text="Rodzaj:" />
+                              <ComboBox fx:id="signalTypeComboBox" prefWidth="200.0" promptText="-" GridPane.rowIndex="1" />
+                              <TextField fx:id="durationInput" prefWidth="200.0" promptText="Wpisz czas trwania [s]" GridPane.rowIndex="3" />
+                              <TextField fx:id="startingTimeInput" promptText="Wpisz czas początkowy [s]" GridPane.rowIndex="5" />
+                              <TextField fx:id="amplitudeInput" promptText="Wpisz amplitudę" GridPane.rowIndex="7" />
+                              <TextField fx:id="frequencyInput" promptText="Wpisz częstotliwość [Hz]" GridPane.rowIndex="9" />
+                              <Button fx:id="importBtn" minWidth="-Infinity" mnemonicParsing="false" prefWidth="75.0" text="Generuj" GridPane.halignment="CENTER" GridPane.rowIndex="10">
+                                 <GridPane.margin>
+                                    <Insets top="15.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Label text="Czas trwania:" GridPane.rowIndex="2" />
+                              <Label text="Czas początkowy:" GridPane.rowIndex="4" />
+                              <Label text="Amplituda:" GridPane.rowIndex="6" />
+                              <Label text="Częstotliwość:" GridPane.rowIndex="8" />
+                           </children>
+                        </GridPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Sygnały" />
+               </tabs>
+            </TabPane>
             <Separator maxHeight="1.7976931348623157E308" orientation="VERTICAL" prefHeight="200.0" prefWidth="8.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.rowSpan="7" GridPane.valignment="TOP">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Separator>
-            <Button fx:id="importBtn" minWidth="-Infinity" mnemonicParsing="false" prefWidth="75.0" text="Generuj" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="TOP">
-               <GridPane.margin>
-                  <Insets left="10.0" right="20.0" top="15.0" />
-               </GridPane.margin>
-            </Button>
-            <Label text="Czas trwania:" GridPane.rowIndex="4" GridPane.valignment="TOP" />
-            <Label text="Czas początkowy:" GridPane.rowIndex="5" GridPane.valignment="TOP" />
-            <Label text="Amplituda:" GridPane.rowIndex="6" GridPane.valignment="TOP" />
-            <Label text="Częstotliwość:" GridPane.rowIndex="7" GridPane.valignment="TOP" />
             <LineChart GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="7">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
