--- a/src/view/layout/sample.fxml
+++ b/src/view/layout/sample.fxml
@@ -18,7 +18,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Plik">
             <items>
-                  <MenuItem mnemonicParsing="false" text="Exportuj..." />
+                  <MenuItem mnemonicParsing="false" text="Eksportuj..." />
                   <MenuItem mnemonicParsing="false" text="Importuj..." />
                   <SeparatorMenuItem mnemonicParsing="false" />
               <MenuItem mnemonicParsing="false" text="Zamknij" />
