--- a/src/view/layout/sample.fxml
+++ b/src/view/layout/sample.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
+<GridPane prefHeight="389.0" prefWidth="942.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
@@ -65,6 +65,8 @@
                               <RowConstraints minHeight="10.0" />
                               <RowConstraints minHeight="10.0" />
                               <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
+                              <RowConstraints minHeight="10.0" />
                               <RowConstraints minHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
                            </rowConstraints>
                            <children>
@@ -74,15 +76,17 @@
                               <TextField fx:id="startingTimeInput" promptText="Wpisz czas początkowy [s]" GridPane.rowIndex="5" />
                               <TextField fx:id="amplitudeInput" promptText="Wpisz amplitudę" GridPane.rowIndex="7" />
                               <TextField fx:id="frequencyInput" promptText="Wpisz częstotliwość [Hz]" GridPane.rowIndex="9" />
-                              <Button fx:id="generateButton" minWidth="-Infinity" mnemonicParsing="false" prefWidth="75.0" text="Generuj" GridPane.halignment="CENTER" GridPane.rowIndex="10">
+                              <Button fx:id="generateButton" minWidth="-Infinity" mnemonicParsing="false" prefWidth="75.0" text="Generuj" GridPane.halignment="CENTER" GridPane.rowIndex="12">
                                  <GridPane.margin>
-                                    <Insets top="15.0" />
+                                    <Insets bottom="5.0" top="15.0" />
                                  </GridPane.margin>
                               </Button>
                               <Label text="Czas trwania:" GridPane.rowIndex="2" />
                               <Label text="Czas początkowy:" GridPane.rowIndex="4" />
                               <Label text="Amplituda:" GridPane.rowIndex="6" />
                               <Label text="Częstotliwość:" GridPane.rowIndex="8" />
+                              <Label text="Przedział histogramu:" GridPane.rowIndex="10" />
+                              <Slider fx:id="intervalSlider" GridPane.rowIndex="11" blockIncrement="5" cache="true" majorTickUnit="5" max="20" min="5" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5" />
                            </children>
                         </GridPane>
                      </content>
@@ -105,10 +109,10 @@
             </BarChart>
             <LineChart fx:id="lineChart" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="7">
               <xAxis>
-                 <NumberAxis side="BOTTOM" lowerBound="-5" tickUnit="1" upperBound="5" />
+                 <NumberAxis lowerBound="-5" side="BOTTOM" tickUnit="1" upperBound="5" />
               </xAxis>
               <yAxis>
-                 <NumberAxis side="LEFT" lowerBound="-5" tickUnit="1" upperBound="5"/>
+                 <NumberAxis lowerBound="-5" side="LEFT" tickUnit="1" upperBound="5" />
               </yAxis>
             </LineChart>
          </children>
