--- a/src/view/layout/sample.fxml
+++ b/src/view/layout/sample.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane prefHeight="389.0" prefWidth="942.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
+<GridPane prefHeight="390.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
@@ -31,8 +31,9 @@
          <columnConstraints>
             <ColumnConstraints />
             <ColumnConstraints maxWidth="29.0" minWidth="22.0" prefWidth="22.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="-Infinity" prefWidth="350.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" prefWidth="350.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" prefWidth="350.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" prefWidth="350.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" prefWidth="200.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints />
@@ -86,7 +87,7 @@
                               <Label text="Amplituda:" GridPane.rowIndex="6" />
                               <Label text="Częstotliwość:" GridPane.rowIndex="8" />
                               <Label text="Przedział histogramu:" GridPane.rowIndex="10" />
-                              <Slider fx:id="intervalSlider" GridPane.rowIndex="11" blockIncrement="5" cache="true" majorTickUnit="5" max="20" min="5" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5" />
+                              <Slider fx:id="intervalSlider" blockIncrement="5" cache="true" majorTickUnit="5" max="20" min="5" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5" GridPane.rowIndex="11" />
                            </children>
                         </GridPane>
                      </content>
@@ -99,7 +100,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Separator>
-            <BarChart fx:id="barChart" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2147483647">
+            <BarChart fx:id="barChart" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="7">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
@@ -115,6 +116,21 @@
                  <NumberAxis lowerBound="-5" side="LEFT" tickUnit="1" upperBound="5" />
               </yAxis>
             </LineChart>
+            <VBox prefHeight="343.0" GridPane.columnIndex="4" GridPane.rowIndex="2" GridPane.rowSpan="7">
+               <children>
+                  <Label text="Parametry sygnału:" underline="true" />
+                  <Label text="Wartość średnia:" />
+                  <Label id="avgVal" text="0" />
+                  <Label text="Wartość średnia bezwzględna:" />
+                  <Label id="avgAbsoluteVal" text="0" />
+                  <Label text="Wartość skuteczna:" />
+                  <Label id="rationaleVal" text="0" />
+                  <Label text="Wariancja:" />
+                  <Label id="varianceVal" text="0" />
+                  <Label text="Moc średnia:" />
+                  <Label id="avgPowerVal" text="0" />
+               </children>
+            </VBox>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
