--- a/src/view/layout/sample.fxml
+++ b/src/view/layout/sample.fxml
@@ -15,11 +15,11 @@
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <MenuBar GridPane.rowIndex="1">
+      <MenuBar fx:id="menuBar" GridPane.rowIndex="1">
         <menus>
           <Menu mnemonicParsing="false" text="Plik">
             <items>
-                  <MenuItem mnemonicParsing="false" text="Eksportuj..." />
+                  <MenuItem fx:id="exportMenuItem" mnemonicParsing="false" text="Eksportuj..." />
                   <MenuItem mnemonicParsing="false" text="Importuj..." />
                   <SeparatorMenuItem mnemonicParsing="false" />
               <MenuItem mnemonicParsing="false" text="Zamknij" />
